# SimpleRag

./: .gitignore  README.md  pyproject.toml
src/: auth.py  key_manager.py  keys.json  routes.py
src/.lancedb/documents.lance/_transactions/: 0-ff8d086e-55a7-4679-82b8-8fda09d1cd7e.txn
src/.lancedb/documents.lance/_versions/: 1.manifest
src/.lancedb/documents.lance/data/: 5d708494-3f5d-41cc-a0e7-2e7013f24593.lance
src/simplerag/: crew.py  main.py
src/simplerag/config/: agents.yaml  tasks.yaml
src/simplerag/tools/: rag_tool.py
