[project]
name = "simplerag"
version = "0.1.0"
description = "SIMPLERAG using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
simplerag = "simplerag.main:run"
run_crew = "simplerag.main:run"
train = "simplerag.main:train"
replay = "simplerag.main:replay"
test = "simplerag.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
